src-tauri/tests/snapshots/audit_events_test__audit_credential_accessed.snap
---
source: tests/audit_events_test.rs
assertion_line: 73
expression: event
---
{
  "id": "[event_id]",
  "timestamp": "[timestamp]",
  "user_id": "user789",
  "action": "credential_accessed",
  "resource_id": "[credential_id]",
  "result": "success",
  "metadata": {
    "purpose": "embedding_generation",
    "service": "OpenAI API"
  }
}
