src-tauri/tests/snapshots/audit_events_test__audit_file_indexed_success.snap
---
source: tests/audit_events_test.rs
assertion_line: 23
expression: event
---
{
  "id": "[event_id]",
  "timestamp": "[timestamp]",
  "user_id": "user123",
  "action": "file_indexed",
  "resource_id": "[resource_path]",
  "result": "success",
  "metadata": {
    "chunks": "15",
    "mime_type": "application/pdf",
    "size_bytes": "102400"
  }
}
