src-tauri/tests/snapshots/audit_events_test__audit_serialization_roundtrip.snap
---
source: tests/audit_events_test.rs
assertion_line: 290
expression: deserialized
---
{
  "id": "[event_id]",
  "timestamp": "[timestamp]",
  "user_id": "user123",
  "action": "question_answered",
  "resource_id": "query_456",
  "result": "success",
  "metadata": {
    "answer_tokens": "150",
    "model": "gpt-3.5-turbo",
    "question": "What is machine learning?"
  }
}
